--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "promo5-js-gestion",
   "version": "1.0.0",
   "description": "a test project to manage packages",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "lite-server",
+    "build": "node-sass scss --output dist/css --watch",
+    "webpack": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,15 @@
   },
   "homepage": "https://github.com/kdoquero/promo5-js-gestion#readme",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "css-loader": "^0.28.9",
+    "html-webpack-plugin": "^2.30.1",
+    "lite-server": "^2.3.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0"
   }
 }
